Project 8: Contrast issues
Contrast issues

--- a/techdegree/proj8/css/survey.css
+++ b/techdegree/proj8/css/survey.css
@@ -125,9 +125,13 @@ input[type=radio] {
 input[type=radio]:focus+span {
 	outline: none;
 }
-input[type=radio]:checked+span, input[type=radio]:focus+span {
+input[type=radio]:focus+span {
 	background: #f2f2f2;
 	border: 3px solid #FF0D00;
+}
+input[type=radio]:checked+span{
+	background: #f2f2f2;
+	border: 3px solid #02eabb;
 }
 
 /*******************
